@@ -59,5 +59,7 @@ GtkWidget *      dh_search_new                (GList          *keywords);
 
 void             dh_search_set_search_string  (DhSearch       *search,
 					       const gchar    *str);
+void             dh_search_grab_focus         (DhSearch       *search);
+
 
 #endif /* __DH_SEARCH_H__ */
