@@ -1,3 +1,10 @@
+2003-06-27  Richard Hult  <richard@imendio.com>
+
+	* src/dh-search.c (dh_search_grab_focus): Add.
+
+	* src/dh-window.c (window_init, window_key_press_event_cb): Make
+	ctrl-l focus the search entry if that page is visible.
+	
 2003-06-24  Mikael Hallendal  <micke@imendio.com>
 
 	* src/dh-parser.c: (dh_parse_file): 
@@ -5,7 +12,7 @@
 
 2003-06-13  Mikael Hallendal <micke@imendio.com>
 
-        * *: Updated mine and Richard contact info
+        * *: Updated mine and Richard's contact info.
 
 2003-05-28  Stanislav Brabec  <sbrabec@suse.cz>
 
